# nix-lambda

./: default.nix  docker.nix  flake.nix  overrides.nix  pyproject.toml  pyrightconfig.json  readme.org  shell.nix
poetry_lambda/: poetry_lambda.py
